<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgContacto"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"/>

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"/>

        <EditText
            android:id="@+id/etEmailC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail" />

        <EditText
            android:id="@+id/etTlf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tlf" />

        <EditText
            android:id="@+id/etImagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"/>

    </LinearLayout>

</ScrollView>